// Protocol Version 2

package mapbox.fontnik;

option optimize_for = LITE_RUNTIME;

message Glyph {
    // FreeType glyph index
    required uint32 glyph_index = 1;

    // Unicode codepoint
    optional uint32 codepoint = 2;

    // Glyph metrics
    optional Metrics metrics = 3;

    // Signed distance field bitmap rendered from glyph outlines.
    optional bytes bitmap = 4;

    message Metrics {
        required uint32 width = 1;
        required uint32 height = 2;
        required sint32 left = 3;
        required sint32 top = 4;
        required uint32 advance = 5;
    }
}

message Face {
    optional string family_name = 1;
    optional string style_name = 2;

    repeated Glyph glyphs = 3;

    optional Metrics metrics = 4;
    optional Metadata metadata = 5;

    message Metrics {
        optional double ascender = 1;
        optional double descender = 2;
        optional double line_height = 3;
    }

    // Signed distance field encoding metadata
    message Metadata {
        optional uint32 size = 1;
        optional uint32 buffer = 2;
        optional float cutoff = 3;
        optional float scale = 4;
        optional uint32 granularity = 5;
        optional float offset = 6;
        optional uint32 radius = 7;
    }
}

message Font {
    repeated Face faces = 1;
    extensions 16 to 8191;
}
